<resources>
    <string name="app_name">CustomerApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_products">Products</string>
    <string name="sellers">Sellers</string>

    <!-- navigation drawer item labels  -->
    <string-array name="navigation_lables">
        <item>@string/nav_item_home</item>
    </string-array>

    <string-array name="sort_options">
        <item>Low to High</item>
        <item>High to Low</item>
    </string-array>

    <integer-array name="navigation_icons">
        <item>@drawable/icon_orders</item>
    </integer-array>

    <string name="action_cart">Cart</string>
    <string name="select">Select</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch">LaunchActivity</string>


<!-- Dialog -->
    <string name="loading">Loading...</string>
    <string name="processing">Processing...</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="ok">Ok</string>


    <!--  Screen Titles-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!--<string name="rememberpassword">Did you remember your Password?</string>
    <string name="donthaveaccount">Don't have an account yet?</string>-->
    <string name="clickhere">Click here</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="updatePassword">Update Password</string>
    <string name="example">Example</string>
    <string name="login_password">Password</string>

    <string name="code_sent">Verification Code Sent to your Mail.</string>
    <string name="password_updated">Password Updated Successfully.</string>


    <!--  Validation messages -->
    <string name="minimum_length">should be minimum %d characters in length.</string>
    <string name="invalidfirstname">First Name should be valid.</string>
    <string name="invalidlastname">Last Name should be valid.</string>
    <string name="invalidusername">Email/Phone should be valid.</string>
    <string name="invalidphonelength">Phone should be 10 characters in length.</string>
    <string name="invalidemail">Email should be valid.</string>
    <string name="invalidemailphone">Email/Phone should be valid.</string>
    <string name="invalidpinlength">Password should be 4 characters in length.</string>
    <string name="invalidconfirmpinlength">Confirm Password should be 4 characters in length.</string>
    <string name="invalidconfirmpinmatch">Password and Confirm Password doesn\'t match.</string>
    <string name="invalidfeedback">Please provide your feedback.</string>
    <string name="invalidmessage">Please provide your message.</string>
    <string name="invalidvalidatonCode">Validation Code should be valid.</string>
    <string name="invalidsampleFormat">Please provide a valid Message Format.</string>
    <string name="invalidmessageDescription">Business Description should be atleast 10 characters in length.</string>

    <string name="invalidname">Name should be valid.</string>
    <string name="invalidaddresslength">Address should be valid.</string>
    <string name="invalidcitylength">City name should be valid.</string>
    <string name="invalidlandmarklength">Landmark should be valid.</string>
    <string name="invalidpincodelength">Pincode should be valid.</string>

    <string name="unable_to_connect_server_please_try_again">Unable to connect to server.Please try again after some time.</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="unable_to_process">Unable to process your request.</string>


    <string name="title_section1">title_section1</string>
    <string name="title_section2">title_section2</string>
    <string name="title_section3">title_section3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="new_product">New Product</string>
    <string name="update_product">Update Product</string>
    <string name="add_new_product">Add New Product</string>
    <string name="quantity">Quantity</string>
    <string name="category_select">Select Category</string>
    <string name="version">version</string>
    <string name="pick">Pick</string>
    <string name="gallery">Gallery</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>





    <string name="preview_count">You can add only 5 preview images for this product.</string>

    <string name="invalid_product_title">Your product title should be minimum 4 characters in length.</string>
    <string name="invalid_product_cost">Provide your product cost.</string>
    <string name="invalid_product_quantity">Provide your product quantity.</string>
    <string name="invalid_product_description">Your product description should be minimum 15 characters in length.</string>
    <string name="invalid_product_previwes">Provide atleast 1 preview images of your product.</string>
    <string name="deliveryBy">Delivery By :</string>
    <string name="cost">Cost</string>
    <string name="alternatePhoneNo">Alternate Phone</string>
    <string name="userName">UserName</string>
    <string name="lastName">LastName</string>
    <string name="firstName">FirstName</string>
    <string name="brandName">BrandName</string>
    <string name="address">Address</string>
    <string name="checkout">Checkout</string>
    <string name="review">Review</string>
    <string name="city">City</string>
    <string name="title_activity_products">ProductsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="cart_items">Cart Items</string>
    <string name="cartQuantityExceeds">Cart Quantity exceeds product Quantity.</string>
    <string name="valid_quantity">Provide a Valid Quantity.</string>

    <string name="payment">Payment.</string>


</resources>
